--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha spec",
     "seed": "node seed.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -26,6 +26,9 @@
     "mongoose": "^6.6.5"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "jest": "^29.2.2",
+    "mocha": "^10.1.0",
     "nodemon": "^2.0.20"
   }
 }
