--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai": "^4.3.6",
     "jest": "^29.2.2",
     "mocha": "^10.1.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.1"
   }
 }
