--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    // "test": "mocha spec",
     "seed": "node seed.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
-    "pretest": "cross-env NODE_ENV=test npm run migrate:reset",
-    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
-    "migrate": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,11 +30,5 @@
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
+  }
 }
