--- a/package.json
+++ b/package.json
@@ -26,9 +26,16 @@
     "mongoose": "^6.6.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "eslint": "^8.27.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.2.2",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.1"
+    "supertest": "^6.3.1",
+    "typescript": "^4.9.3"
   }
 }
